# oort-router

./: README.md  router-config.yaml
dnsmasq/: Dockerfile  config.yaml  dnsmasq.conf
oort-tools/: pyproject.toml
oort-tools/oort_tools/: aws.py  main.py
oort-tools/oort_tools/email/: send.py  standard_email.py
