[tool.poetry]
name = "oort-tools"
version = "0.1.0"
description = ""
authors = ["Filip Sufitchi <fsufitchi@no.reply.github.com>"]
license = "GPLv3"
readme = "README.md"
packages = [{include = "oort_tools"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
